# uvcstreamer

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  configure  configure.ac  httpd.c  httpd.h  input.h  input_uvc.c  input_uvc.h  uvcstreamer.c  uvcstreamer.h  v4l2uvc.c  v4l2uvc.h
src/: Makefile.am  Makefile.in  dynctrl.c  httpd.c  output.h  v4l2uvc.c  v4l2uvc.h
